--- a/app.css
+++ b/app.css
@@ -86,7 +86,7 @@ nav ul li a:hover {
 
 /* Hero Section */
 .hero-section {
-	background-image: url('');
+	background-image: url('https://i.ibb.co/D9PVL8q/00085-2528884041.png');
 	background-size: cover;
 	background-position: center center;
 	min-height: 500px;
