--- a/app.css
+++ b/app.css
@@ -94,6 +94,8 @@ nav ul li a:hover {
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
+	padding: 50px; /* adds 50 pixels of padding to all sides of the section */
+  	text-align: center; /* centers all the content within the section horizontally *
 }
 
 .hero-section h1 {
