--- a/app.css
+++ b/app.css
@@ -49,8 +49,11 @@ header {
 }
 
 .logo {
-	font-weight: 600;
-	font-size: 36px;
+  width: 100%;
+  text-align: center;
+  font-weight: 600;
+  font-size: 36px;
+
 }
 
 .logo a {
