--- a/app.css
+++ b/app.css
@@ -7,10 +7,10 @@
 
 /* Global Styles */
 body {
-	font-family: 'Poppins', sans-serif;
+	font-family: 'Roboto Slab', serif;
 	color: #333;
 	background-color: #f5f5f5;
-	font-size: 16px;
+	font-size: 22px;
 	line-height: 1.5;
 }
 
