--- a/app.css
+++ b/app.css
@@ -100,7 +100,8 @@ nav ul li a:hover {
 	justify-content: center;
 	padding: 50px;
 	text-align: center;
-	margin-top: 125px; /* add margin to push section below header */
+	margin-top: 100px; /* add margin to push section below header */
+	margin-bottom: 0;
 }
 
 .view-collection {
