--- a/app.css
+++ b/app.css
@@ -102,13 +102,16 @@ nav ul li a:hover {
 	text-align: center;
 	margin-top: 100px; /* add margin to push section below header */
 	margin-bottom: 0;
+	position: relative; /* make the hero-section a positioned element */
 }
 
 .view-collection {
-	margin-top: 100px; /* increase the margin top to move the button down */
+	position: absolute; /* make the button an absolutely positioned element */
+	bottom: 0; /* position the button at the bottom of the section */
+	margin-bottom: 50px; /* add margin between the button and the bottom of the section */
+	left: 50%; /* position the button in the horizontal center of the section */
+	transform: translateX(-50%); /* center the button using a horizontal translation */
 }
-
-
 
 .hero-section h1 {
 	font-size: 72px;
@@ -119,21 +122,6 @@ nav ul li a:hover {
 }
 
 .hero-section {
-  padding: 50px; /* adds 50 pixels of padding to all sides of the section */
-  text-align: center; /* centers all the content within the section horizontally */
-}
+	padding: 50px; /* adds 50 pixels of padding to all sides of the section */
+	text-align: center; /* centers all the content within the section horizontally
 
-
-.tagline {
-	font-size: 36px;
-	font-weight: 400;
-	color: #F85DFF;
-	margin-bottom: 30px;
-	text-shadow: 1px 1px 1px #ccc;
-}
-
-.cta-button {
-	background-color: #F85DFF;
-	color: #fff;
-	padding: 20px 40px;
-	border-radius: 30px
