--- a/app.css
+++ b/app.css
@@ -7,7 +7,7 @@
 
 /* Global Styles */
 body {
-	font-family: 'Roboto Slab', serif; /* change font family to Roboto Slab */
+	font-family: 'Poppins', sans-serif;
 	color: #333;
 	background-color: #f5f5f5;
 	font-size: 15px;
@@ -97,16 +97,17 @@ nav ul li a:hover {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	justify-content: flex-end; /* align button to bottom of section */
+	justify-content: center;
 	padding: 50px;
 	text-align: center;
-	margin-top: 100px; /* add margin to push section below header */
-	margin-bottom: 0;
+	margin-top: 100px; /* add a margin-top to push the section down */
 }
 
 .view-collection {
-	margin-top: 30px; /* decrease the margin top to make the button lower */
+	margin-top: 100px; /* increase the margin top to move the button down */
 }
+
+
 
 .hero-section h1 {
 	font-size: 72px;
@@ -121,6 +122,7 @@ nav ul li a:hover {
   text-align: center; /* centers all the content within the section horizontally */
 }
 
+
 .tagline {
 	font-size: 36px;
 	font-weight: 400;
@@ -131,4 +133,22 @@ nav ul li a:hover {
 
 .cta-button {
 	background-color: #F85DFF;
-	color
+	color: #fff;
+	padding: 20px 40px;
+	border-radius: 30px;
+	font-size: 24px;
+	font-weight: 500;
+	text-transform: uppercase;
+	letter-spacing: 1px;
+	border: none;
+	cursor: pointer;
+	transition: all 0.3s ease;
+	text-shadow: 2px 2px 2px #ccc;
+}
+
+.cta-button:hover {
+	background-color: #ccc;
+	color: #F85DFF;
+	text-shadow: 3px 3px 3px #fff;
+	transform: scale(1.1);
+}
