--- a/app.css
+++ b/app.css
@@ -42,7 +42,7 @@ header {
 	justify-content: center;
 	align-items: center;
 	padding: 20px;
-	border-radius: 20px;
+	border-radius: 20px 20px 0 0; /* make the top corners round */
 	background-image: url('texture.jpg');
 	background-repeat: repeat;
 	opacity: 0.8; /* set the opacity to 80% */
@@ -100,11 +100,11 @@ nav ul li a:hover {
 	justify-content: center;
 	padding: 50px;
 	text-align: center;
-	margin-top: 100px; /* add a margin-top to push the section down */
+	margin-top: 0; /* remove the top margin to make it flush with the header */
 }
 
 .view-collection {
-	margin-top: 100px; /* increase the margin top to move the button down */
+	margin-top: 100px;
 }
 
 
@@ -118,8 +118,8 @@ nav ul li a:hover {
 }
 
 .hero-section {
-  padding: 50px; /* adds 50 pixels of padding to all sides of the section */
-  text-align: center; /* centers all the content within the section horizontally */
+  padding: 50px;
+  text-align: center;
 }
 
 
@@ -140,15 +140,4 @@ nav ul li a:hover {
 	font-weight: 500;
 	text-transform: uppercase;
 	letter-spacing: 1px;
-	border: none;
-	cursor: pointer;
-	transition: all 0.3s ease;
-	text-shadow: 2px 2px 2px #ccc;
-}
-
-.cta-button:hover {
-	background-color: #ccc;
-	color: #F85DFF;
-	text-shadow: 3px 3px 3px #fff;
-	transform: scale(1.1);
-}
+	border
