--- a/app.css
+++ b/app.css
@@ -33,8 +33,6 @@ a:hover {
 header {
 	background-color: rgba(248, 93, 255, 0.8); /* set the background color with alpha channel */
 	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-	top: 0;
-	left: 0;
 	width: 100%;
 	z-index: 999;
 	display: flex;
@@ -99,10 +97,11 @@ nav ul li a:hover {
 	justify-content: center;
 	padding: 50px;
 	text-align: center;
+	margin-top: 120px; /* add a margin-top equal to header height to push the section down */
 }
 
 .view-collection {
-	margin-top: 200px; /* increase the margin top to move the button down */
+	margin-top: 100px;
 }
 
 .hero-section h1 {
@@ -114,9 +113,10 @@ nav ul li a:hover {
 }
 
 .hero-section {
-	padding: 50px; /* adds 50 pixels of padding to all sides of the section */
-	text-align: center; /* centers all the content within the section horizontally */
+  padding: 50px; /* adds 50 pixels of padding to all sides of the section */
+  text-align: center; /* centers all the content within the section horizontally */
 }
+
 
 .tagline {
 	font-size: 36px;
@@ -126,6 +126,9 @@ nav ul li a:hover {
 	text-shadow: 1px 1px 1px #ccc;
 }
 
+.cta-button {
+	background-color: #F85DFF;
+	color: #fff;
 .cta-button {
 	background-color: #F85DFF;
 	color: #fff;
@@ -143,10 +146,29 @@ nav ul li a:hover {
 	z-index: 1;
 }
 
-.cta-button:hover {
-	background-color: #ccc;
-	color: #F85DFF;
-	text-shadow: 3px 3px 3px #fff;
-	transform: scale(1.1);
+.cta-button::after {
+	content: "";
+	background-color: #F85DFF;
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: -1;
+	opacity: 0;
+	transition: all 0.3s ease;
+	transform: scale(0.9);
+	border-radius: 30px;
 }
 
+.cta-button:hover::after {
+	opacity: 1;
+	transform: scale(1);
+}
+
+.cta-button:hover {
+	background-color: #fff;
+	color: #F85DFF;
+	text-shadow: 3px 3px 3px #ccc;
+	transform: scale(1.1);
+}
