--- a/app.css
+++ b/app.css
@@ -33,6 +33,9 @@ a:hover {
 header {
 	background-color: rgba(248, 93, 255, 0.8); /* set the background color with alpha channel */
 	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+	position: fixed;
+	top: 0;
+	left: 0;
 	width: 100%;
 	z-index: 999;
 	display: flex;
@@ -97,12 +100,14 @@ nav ul li a:hover {
 	justify-content: center;
 	padding: 50px;
 	text-align: center;
-	margin-top: 120px; /* add a margin-top equal to header height to push the section down */
+	margin-top: 100px; /* add a margin-top to push the section down */
 }
 
 .view-collection {
-	margin-top: 100px;
+	margin-top: 100px; /* increase the margin top to move the button down */
 }
+
+
 
 .hero-section h1 {
 	font-size: 72px;
@@ -124,11 +129,7 @@ nav ul li a:hover {
 	color: #F85DFF;
 	margin-bottom: 30px;
 	text-shadow: 1px 1px 1px #ccc;
-}
-
-.cta-button {
-	background-color: #F85DFF;
-	color: #fff;
+	
 .cta-button {
 	background-color: #F85DFF;
 	color: #fff;
@@ -142,33 +143,17 @@ nav ul li a:hover {
 	cursor: pointer;
 	transition: all 0.3s ease;
 	text-shadow: 2px 2px 2px #ccc;
-	position: relative;
-	z-index: 1;
-}
-
-.cta-button::after {
-	content: "";
-	background-color: #F85DFF;
-	width: 100%;
-	height: 100%;
-	position: absolute;
-	top: 0;
-	left: 0;
-	z-index: -1;
-	opacity: 0;
-	transition: all 0.3s ease;
-	transform: scale(0.9);
-	border-radius: 30px;
-}
-
-.cta-button:hover::after {
-	opacity: 1;
-	transform: scale(1);
+	position: relative; /* add relative position to the button */
+	z-index: 1; /* set a higher z-index to make the button appear on top of the banner */
+	margin-top: -100px; /* move the button up to sit on top of the banner */
 }
 
 .cta-button:hover {
-	background-color: #fff;
+	background-color: #ccc;
 	color: #F85DFF;
-	text-shadow: 3px 3px 3px #ccc;
+	text-shadow: 3px 3px 3px #fff;
 	transform: scale(1.1);
 }
+
+
+
